# niftyled-vlc

./: ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  configure.ac
debian/: README.Debian  README.source  changelog  control.tmpl.in  copyright  niftyled-vlc-dev.dirs  niftyled-vlc-dev.install  niftyled-vlc.install  rules.tmpl.in
gentoo/media-plugins/niftyled-vlc/: niftyled-vlc-9999.ebuild.in
modules/: Makefile.am
modules/video_output/: Makefile.am
modules/video_output/src/: Makefile.am  niftyled.c
